--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,3 +3,5 @@ $small-container-width:1240px;
 $light-gray: #f3f3f3;
 $brown:#b25e39;
 $dark-brown: #473d3a;
+$common-margin:60px;
+$phone-common-margin:30px;
