--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -1,1 +1,58 @@
 @use 'variables' as *;
+
+form {
+    background-color: unset;
+    border: 1px solid $brown;
+    max-width: 50vw;
+    text-align: center;
+    padding: 20px;
+    background-color: rgb(254, 253, 233, 0.2);
+    border-radius: 5px;
+
+    @media screen and (max-width:720px) {
+        max-width: unset;
+    }
+
+    button {
+        border: none;
+        border-radius: 15px;
+        padding: 10px 15px;
+        width: 10rem;
+        align-self: center;
+        background-color: #E6E6E6;
+    
+        &:hover {
+            background-color: #b8b8b8;
+        }
+    }
+
+    label {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    
+    input, textarea {
+        width: 20rem; 
+        border: none;
+        border-radius: 15px;
+        background-color: #E6E6E6;
+        padding: 10px 15px;
+    
+        @media screen and (max-width:470px) {
+            max-width: 15rem;
+            font-size: 12px;
+        }
+    
+        @media screen and (max-width:380px) {
+            max-width: 10rem;
+        }
+    }
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    gap: $phone-common-margin;
+    text-align: left;
+}
