--- a/scss/header.scss
+++ b/scss/header.scss
@@ -2,15 +2,48 @@
 
 * {
     margin: 0 auto;
-    padding: 0 auto;
     box-sizing: border-box;
+}
+
+header {
+    color: white !important;
+    font-family: 'TradeWinds';
+    width: 100vw;
+}
+
+html, body {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex-grow: 1;
+    width: 100vw;
+}
+
+body {
+    font-family: 'Montserrat';
+}
+
+.trade-winds {
+    font-family: 'TradeWinds';
+}
+
+
+.big-container {
+    max-width: $big-container-width;
+}
+
+.small-container {
+    max-width: $small-container-width;
 }
 
 .logo {
     height: 50px;
 }
 
-.navber-nav {
+.navbar-nav {
     margin: 0 auto;
 }
 
@@ -20,12 +53,99 @@
 
 .nav-link {
     padding-right: 60px !important;
+    color: white;
 
     @media screen and (max-width: 992px) {
         padding-right: 0 !important;
+    }
+
+    &:hover {
+        text-decoration: underline;
+        text-decoration-color: white;
+        text-underline-offset: 5px;
+        color: black !important;
     }
 }
 
 .bg-brown {
     background-color: $brown;
 }
+
+.p-30 {
+    padding: $phone-common-margin;
+
+    @media screen and (max-width: 992px) {
+        padding: calc($phone-common-margin / 2);
+    }
+}
+
+.p-60 {
+    padding: $common-margin;
+
+    @media screen and (max-width:992px) {
+        padding: $phone-common-margin;
+    }
+}
+
+.pb-60 {
+    padding-bottom: $common-margin;
+
+    @media screen and (max-width: 992px) {
+        padding-bottom: $phone-common-margin;
+    }
+}
+
+.mb-60 {
+    margin-bottom: $common-margin;
+
+    @media screen and (max-width: 992px) {
+        margin-bottom: $phone-common-margin;
+    }
+}
+
+.mt-60 {
+    margin-top: $common-margin;
+
+    @media screen and (max-width:992px) {
+        margin-top: $phone-common-margin;
+    }
+}
+
+.f-18 {
+    font-size: 18px;
+
+    @media screen and (max-width:992px) {
+        font-size: 16px;
+    }
+}
+
+.f-16 {
+    font-size: 16px;
+
+    @media screen and (max-width:992px) {
+        font-size: 14px;
+    }
+}
+
+.f-14 {
+    font-size: 14px;
+
+    @media screen and (max-width:992px) {
+        font-size: 12px;
+    }
+}
+
+.f-12 {
+    font-size: 12px;
+
+    @media screen and (max-width:992px) {
+        font-size: 10px;
+    }
+}
+
+.active {
+    text-decoration: underline;
+    text-underline-offset: 5px;
+    text-decoration-color: black;
+}
+
