--- a/scss/home.scss
+++ b/scss/home.scss
@@ -1,1 +1,27 @@
 @use 'variables' as *;
+
+.img-container {
+    background-size: cover;
+    background-image: url(/images/alps.jpg);
+    width: 100vw;
+    height: 30rem;
+    filter: blur(8px);
+}
+
+.t-white {
+    color: white;
+}
+.img-container-text {
+    position: absolute;
+    top: 20rem;
+    left: $common-margin;
+
+    @media screen and (max-width:992px) {
+        left: $phone-common-margin;
+        // top: 10rem;
+    }
+}
+
+iframe {
+    width: 100%;
+}
