--- a/css/header.css
+++ b/css/header.css
@@ -1,14 +1,46 @@
 * {
   margin: 0 auto;
-  padding: 0 auto;
   box-sizing: border-box;
+}
+
+header {
+  color: white !important;
+  font-family: "TradeWinds";
+  width: 100vw;
+}
+
+html, body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex-grow: 1;
+  width: 100vw;
+}
+
+body {
+  font-family: "Montserrat";
+}
+
+.trade-winds {
+  font-family: "TradeWinds";
+}
+
+.big-container {
+  max-width: 1460px;
+}
+
+.small-container {
+  max-width: 1240px;
 }
 
 .logo {
   height: 50px;
 }
 
-.navber-nav {
+.navbar-nav {
   margin: 0 auto;
 }
 
@@ -18,13 +50,107 @@
 
 .nav-link {
   padding-right: 60px !important;
+  color: white;
 }
 @media screen and (max-width: 992px) {
   .nav-link {
     padding-right: 0 !important;
   }
 }
+.nav-link:hover {
+  text-decoration: underline;
+  text-decoration-color: white;
+  text-underline-offset: 5px;
+  color: black !important;
+}
 
 .bg-brown {
   background-color: #b25e39;
+}
+
+.p-30 {
+  padding: 30px;
+}
+@media screen and (max-width: 992px) {
+  .p-30 {
+    padding: 15px;
+  }
+}
+
+.p-60 {
+  padding: 60px;
+}
+@media screen and (max-width: 992px) {
+  .p-60 {
+    padding: 30px;
+  }
+}
+
+.pb-60 {
+  padding-bottom: 60px;
+}
+@media screen and (max-width: 992px) {
+  .pb-60 {
+    padding-bottom: 30px;
+  }
+}
+
+.mb-60 {
+  margin-bottom: 60px;
+}
+@media screen and (max-width: 992px) {
+  .mb-60 {
+    margin-bottom: 30px;
+  }
+}
+
+.mt-60 {
+  margin-top: 60px;
+}
+@media screen and (max-width: 992px) {
+  .mt-60 {
+    margin-top: 30px;
+  }
+}
+
+.f-18 {
+  font-size: 18px;
+}
+@media screen and (max-width: 992px) {
+  .f-18 {
+    font-size: 16px;
+  }
+}
+
+.f-16 {
+  font-size: 16px;
+}
+@media screen and (max-width: 992px) {
+  .f-16 {
+    font-size: 14px;
+  }
+}
+
+.f-14 {
+  font-size: 14px;
+}
+@media screen and (max-width: 992px) {
+  .f-14 {
+    font-size: 12px;
+  }
+}
+
+.f-12 {
+  font-size: 12px;
+}
+@media screen and (max-width: 992px) {
+  .f-12 {
+    font-size: 10px;
+  }
+}
+
+.active {
+  text-decoration: underline;
+  text-underline-offset: 5px;
+  text-decoration-color: black;
 }
