--- a/css/fonts.css
+++ b/css/fonts.css
@@ -12,4 +12,4 @@
   font-family: TradeWinds;
   src: url(/fonts/TradeWinds-Regular.ttf);
   font-weight: 300;
-}/*# sourceMappingURL=fonts.css.map */
+}
