updated images path

--- a/scss/home.scss
+++ b/scss/home.scss
@@ -2,7 +2,7 @@
 
 .img-container {
     background-size: cover;
-    background-image: url(/images/alps.jpg);
+    background-image: url(images/alps.jpg);
     width: 100vw;
     height: 30rem;
     filter: blur(8px);
