--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,6 @@
 .img-container {
   background-size: cover;
-  background-image: url(images/alps.jpg);
+  background-image: url(./images/alps.jpg);
   width: 100vw;
   height: 30rem;
   filter: blur(8px);
