--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,15 +1,15 @@
 @font-face {
   font-family: Montserrat;
-  src: url(/fonts/Montserrat-Regular.ttf);
+  src: url(../fonts/Montserrat-Regular.ttf);
   font-weight: 300;
 }
 @font-face {
   font-family: Montserrat;
-  src: url(/fonts/Montserrat-Bold.ttf);
+  src: url(../fonts/Montserrat-Bold.ttf);
   font-weight: 700;
 }
 @font-face {
   font-family: TradeWinds;
-  src: url(/fonts/TradeWinds-Regular.ttf);
+  src: url(../fonts/TradeWinds-Regular.ttf);
   font-weight: 300;
 }
